--- a/trunk/org.mwc.cmap.core/src/org/mwc/cmap/core/property_support/lengtheditor/messages.properties
+++ b/trunk/org.mwc.cmap.core/src/org/mwc/cmap/core/property_support/lengtheditor/messages.properties
@@ -2,11 +2,11 @@ LengthPropertyCellEditor_Select=Select...
 LengthPropertyCellEditor_NotLoaded=not loaded
 LengthPropertyDescriptor_InvalidValueType=Invalid value type.
 LengthPropertyDescriptor_NotValid=It is not a valid length.
-LengthsLookupPreferencesPage_ErrorOnOpenFileEditor=An error occurred during opening system editor.
+LengthsLookupPreferencesPage_ErrorOnOpenFileEditor=An error occurred trying to open Excel.
 LengthsLookupPreferencesPage_FileLabel=File:
 LengthsLookupPreferencesPage_InvalidFileName=Invalid file name.
-LengthsLookupPreferencesPage_OpenFileLabel=<a>Open file with data...</a>
-LengthsLookupPreferencesPage_UpdateNow=Update now
-LengthsRegistry_EmptyFile=File name of 'Vessel lengths' file is empty.
-LengthsRegistry_ErrorOnReading=Error occured on reading 'Vessel lengths' file.
-LengthsRegistry_FileNotFound='Vessel lengths' file not found.
+LengthsLookupPreferencesPage_OpenFileLabel=<a>Edit lengths file...</a>
+LengthsLookupPreferencesPage_UpdateNow=Reload
+LengthsRegistry_EmptyFile=File name of 'Sensor offsets' file is empty.
+LengthsRegistry_ErrorOnReading=Error occured on reading 'Sensor offsets' file.
+LengthsRegistry_FileNotFound='Sensor offsets' file not found.
