Slightly better length editor support, include sample lengths editor in dist
git-svn-id: http://subversion.assembla.com/svn/Debrief@2856 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/src/org/mwc/cmap/core/property_support/lengtheditor/messages.properties
+++ b/trunk/org.mwc.cmap.core/src/org/mwc/cmap/core/property_support/lengtheditor/messages.properties
@@ -7,6 +7,6 @@ LengthsLookupPreferencesPage_FileLabel=File:
 LengthsLookupPreferencesPage_InvalidFileName=Invalid file name.
 LengthsLookupPreferencesPage_OpenFileLabel=<a>Edit lengths file...</a>
 LengthsLookupPreferencesPage_UpdateNow=Reload
-LengthsRegistry_EmptyFile=File name of 'Sensor offsets' file is empty.
+LengthsRegistry_EmptyFile=File name of 'Sensor offsets' file is unset in preferences.
 LengthsRegistry_ErrorOnReading=Error occured on reading 'Sensor offsets' file.
 LengthsRegistry_FileNotFound='Sensor offsets' file not found.
